fix backstage checkbox alignment

--- a/demos/PersonalizerBusinessDemo/PersonalizerBusinessDemo/wwwroot/css/site.css
+++ b/demos/PersonalizerBusinessDemo/PersonalizerBusinessDemo/wwwroot/css/site.css
@@ -436,3 +436,13 @@ h1 {
 .chart-height {
     height: 20rem;
 }
+
+.custom-control-input {
+    position: static;
+    margin: 0 .5rem -0.1rem 0;
+}
+
+.custom-control-description {
+    line-height: 80%;
+    padding-top: 0.4rem;
+}
